# diffrender_tutorials

./: .gitignore  2d_triangles.cpp  Bitmap.cpp  CMakeLists.txt  README.md  dmesh.h  dmodels.h  drender.cpp  drender.h  fin_diff.cpp  functions.cpp  functions.h  image_mse_test.cpp  main.cpp  make_video.sh  optimizer.h  optimizer_complex.cpp  optimizer_simple.cpp  qmc.cpp  qmc.h  raytrace.h  raytrace2d.cpp  raytrace3d.cpp  scenes.cpp  scenes.h  utils.cpp  video.sh
common_src/: Image2d.cpp  camera.h  cmesh.cpp  cmesh.h  scene.h  scene_utils.cpp
data/meshes/: teapot_16K.vsgf  vase.vsgf
include/: Image2d.h  LiteMath.h
mitsuba_src/: drender_mitsuba.cpp  drender_mitsuba.h  mitsuba_python_interaction.cpp  mitsuba_python_interaction.h
mitsuba_src/stub/: drender_mitsuba.h
raytrace_src/: CrossRT.h  EmbreeRT.cpp  raytrace.h  raytrace2d.cpp  raytrace3d_bf.cpp  raytrace3d_embree.cpp
scripts/: mitsuba_optimization_embedded.py
src/: dmesh.h  dmodels.h  drender.cpp  drender.h  drender_autodiff.cpp  drender_mitsuba.cpp  fin_diff.cpp  fin_diff.h  functions.cpp  functions.h  main.cpp  mitsuba_python_interaction.cpp  mitsuba_python_interaction.h  optimizer.h  optimizer_simple.cpp  scenes.cpp  scenes.h  shade_common.cpp  shade_common.h  shade_lambert.cpp  shade_path_test.cpp  shade_simple.cpp  tests.cpp  tests.h  utils.cpp  utils.h  virtual_drender.h
